<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="thank_you">Thank You</string>

    <string name="app_name">Castto - Screen Mirroring</string>
    <string name="app_title">Screen Mirroring</string>

    <string name="instructions">Instructions</string>

    <!--side_bar_info-->
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Give us 5-Star</string>
    <string name="more_apps">More apps</string>
    <string name="share_app">Share app</string>
    <string name="change_language">Change Language</string>
    <string name="exit">Exit</string>
    <string name="ad_settings">AD Settings</string>

    <!--home_screen_info-->

    <string name="first_point">Make sure your TV &amp; Phone are connected to the same wifi network.</string>
    <string name="second_point">Enable Miracast Display on your TV &amp; Wireless Display on your phone.</string>
    <string name="third_point">Click the Select button and choose the TV that you want to show your phone screen on.</string>

    <string name="new_first_point">TV &amp; Phone must be connected to the same wifi</string>
    <string name="new_second_point">Enable Miracast Display on your TV</string>
    <string name="new_third_point">Click on the Select TV button in the next page, \nenable Wireless Display &amp; choose your TV</string>

    <!--multi_language-->
    <string name="multi_language">Select Language</string>
    <string name="lang_desc">Click on this button and select your language.</string>
    <!--rate_us_popup-->
    <string name="rate_us_title">Support us</string>
    <string name="rate_us_message">If you enjoy using This App, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_us_cancel">No thanks</string>
    <string name="rate_us_ok">YES</string>

    <!--share_app_text-->
    <string name="download_this">Download this helpful app Now!</string>

    <!--exit_app_text-->
    <string name="exit_desc">Are you sure you want to exit the application?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>

    <!--Live Ads-->

    <string name="app_id">ca-app-pub-3424164443057663~5033483146</string>
    <string name="banner_home_footer">ca-app-pub-3424164443057663/2755200945</string>
    <string name="interstitial_full_screen">ca-app-pub-3424164443057663/4374979347</string>
    <string name="native_ad">ca-app-pub-3424164443057663/3676119421</string>
    <string name="open_ad">ca-app-pub-3424164443057663/2068442448</string>

<!--    Test Ads-->
<!--     <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--   <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>-->
<!--   <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>-->
<!--   <string name="native_ad">ca-app-pub-3940256099942544/2247696110</string>-->
<!--    <string name="open_ad">ca-app-pub-3940256099942544/3419835294</string>-->
    <!--Home screen buttons-->
    <string name="select">SELECT TV</string>
    <string name="info">HOW TO USE</string>

    <!--Feedback screen-->
    <string name="leave_feedback">Leave Feedback</string>
    <string name="help_us">Help us improve</string>
    <string name="feedback_detail">We\'d love to know how we can make this App better and make your experience with it a happy one!</string>
    <string name="contact_us">Contact Us</string>

    <!--Rate us-->
    <string name="thanks_for_the_love">Thanks for the love!</string>
    <string name="rate_us_detail">We\'re happy you love using Our App! We\'d appreciate if you could take a moment to rate!</string>
    <string name="rate_us_">Rate Us!</string>

    <!--Third exit from app-->
    <string name="do_you_love_this_app">Do you love this App?</string>
    <string name="nah">Nah</string>
    <string name="i_like_it">I like it!</string>

    <string name="rate_text">A five-star rating inspires us\nto serve you better :)</string>
    <string name="contact_text">Please let us know how we can improve</string>

    <string name="ad_attribution">Ad</string>

    <string name="rate_us_main">Why not rate us a 5-Star?</string>
    <string name="ok">OK</string>
    <string name="sorry">It\'s Okay</string>

    <string name="cancel">Cancel</string>
    <string name="insta" translatable="false">Instagram</string>
    <string name="fb" translatable="false">Facebook</string>
    <string name="follow_us">Let\'s be friends!</string>
    <!--<string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="ratingMessage">Thanks! We are waiting for your 5-Star!</string>

    <string name="we_care_about_your_privacy_and_data_security">We care about your privacy and data security.</string>
    <string name="ok_got_it">OK, GOT IT</string>
    <string name="we_use_technologies">We use technologies inside the app to personalize the content and ads for your better experience. We keep this app free by showing ads. Our partners will collect data and use a unique identifier on your device to show you more relevant ads.<a href="https://www.soomapps.com/castto-privacy-policy/">Learn</a> how Castto and our partners collect and use data.</string>
    <string name="by_continuing">By continuing using the app you consent to our use of your data. You can change your choice anytime for Castto via the AD Settings section of the app. Also Check our <a href="https://www.soomapps.com/castto-privacy-policy/">privacy policy</a></string>
    <string name="policyy"><u>privacy policy</u></string>

    <!--    Info Screen-->
    <string name="selectt">Select TV</string>
    <string name="are_you_satified">Are you satisfied with this Screen Mirroring?</string>
    <string name="good">GOOD</string>
    <string name="not_really">NOT REALLY</string>

    <string name="rate">RATE</string>
    <string name="better_user_experience">We are working hard for a better user experience.</string>
    <string name="greatly_aapreciate">We\'d greatly appreciate if you can</string>
    <string name="rating_us">rate us.</string>
    <string name="best_way_can_get">The best we can get :)</string>

    <string name="oh_no">Oh, no!</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="thanks_for_feedback">Thanks for your feedback.</string>
    <string name="rate_google_play">RATE ON GOOGLE PLAY</string>
    <string name="please_leave_us_feedback">Please leave us some feedback.</string>

    <string name="tell_us_problem">Tell us the problem you encountered</string>
    <string name="type">Type</string>
    <string name="doesnot_work">Doesn\'t work</string>
    <string name="cannot_findmy_tv">Can\'t find my tv</string>
    <string name="poor_connection">Poor connection</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="others">Others</string>
    <string name="more_details">Please tell us more details..</string>
    <string name="submit">SUBMIT</string>

    <string name="thanks_feedback">Thanks for your feedback</string>
    <string name="future_version">We will fix in the future version.</string>
    <string name="sorry_inconvenience">Sorry for the inconvenience</string>




</resources>
