<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_us_title"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/rate_us_message"
        android:textColor="@color/title_color" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right">

        <Button
            android:id="@+id/dialogButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:text="@string/rate_us_cancel" />

        <Button
            android:id="@+id/dialogButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:text=" Ok " />
    </LinearLayout>
</RelativeLayout>
