<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />

    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_chat"
        android:layout_gravity="center"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/tell_us_problem"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/text_doesnot_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/doesnot_work"
            android:gravity="center"
            android:background="@drawable/not_really_bg"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:enabled="true"
            />

        <TextView
            android:id="@+id/text_cannot_find_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/cannot_findmy_tv"
            android:gravity="center"
            android:background="@drawable/not_really_bg"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:enabled="true"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_18sdp">

            <TextView
                android:id="@+id/text_poor_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/poor_connection"
                android:gravity="center"
                android:background="@drawable/not_really_bg"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/text_too_many_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/too_many_ads"
                android:gravity="center"
                android:background="@drawable/not_really_bg"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_other"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/others"
            android:gravity="center"
            android:background="@drawable/not_really_bg"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"/>


        <EditText
            android:id="@+id/et_more_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:hint="@string/more_details"
            android:inputType="text|textMultiLine"
            android:gravity="start"
            android:textColorHint="#BDC1CF"
            android:background="@drawable/not_really_bg"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_12sdp"
            android:background="@drawable/submit_btn_disable"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:text="@string/submit"
            android:clickable="false"
            />

    </LinearLayout>

    </LinearLayout>
</ScrollView>