<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:orientation="vertical"
        >


        <ImageView
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_check_mark"/>


        <TextView
            android:id="@+id/choosetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/thanks_feedback"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/future_version"
            android:gravity="center"
            android:textColor="#929097"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/sorry_inconvenience"
            android:gravity="center"
            android:textColor="#929097"
            android:textSize="16sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/ok_button_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_12sdp"
                android:background="@drawable/rating_button_bg"
                android:textColor="#ffffff"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:text="@string/ok"
                android:textStyle="bold"
                />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
