<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_330sdp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/rate_emoji"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/icon_when_no_star_is_selected" />

        <ImageView
            android:id="@+id/cancelIMG"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_41sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_cancel" />


        <TextView
            android:id="@+id/rate_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/better_user_experience"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rate_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/greatly_aapreciate"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rate_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/rating_us"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center">

            <!--<ImageView-->
            <!--android:id="@+id/gifImage"-->
            <!--android:layout_width="246dp"-->
            <!--android:layout_height="@dimen/_50sdp"-->
            <!--android:visibility="visible"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:scaleType="fitXY"/>-->

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/ratingGIF"
                android:layout_width="250dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/rating_system_renew"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/ratinglayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_6sdp" />
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/choosetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/best_way_can_get"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_7sdp"
                android:layout_toRightOf="@id/choosetxt"
                android:src="@drawable/arrow_best_we_get" />

        </LinearLayout>

        <Button
            android:id="@+id/rate_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/rate_btn_bg"
            android:padding="@dimen/_12sdp"
            android:text="@string/rate"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
